Fix settings > rooms scrolling on Firefox

--- a/src/screens/settings/rooms/rooms.scss
+++ b/src/screens/settings/rooms/rooms.scss
@@ -9,6 +9,7 @@ main#settings main#settings-rooms {
         right: 0;
         bottom: 0;
         transition: opacity 250ms, transform 250ms;
+        overflow: auto;
         overflow: overlay;
 
         &.hidden {
